# Statline

./: .gitignore  00_devlog.md  README.md  main.py  pyproject.toml
notebooks/game/: dim_games copy.ipynb
notebooks/players/: dim_player.ipynb  fact_player.ipynb  fact_player_game.ipynb
notebooks/team/: dim_team.ipynb  fact_team_game.ipynb
statline_dbt/: dbt_project.yml  packages.yml
